# scan_image_slicer

./: .gitignore  COMMANDS.md  README.md  pyproject.toml
src/scan_image_slicer/: __init__.py  config.py  confparser.py  filters.py  gui.py  gui_widgets.py  scan_image_slicer.py  scis.py  scis_image.py  scis_logger.py  utils.py
src/scan_image_slicer/imutils/: perspective.py
